--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "design",
-  "version": "0.0.0",
+  "name": "light design website",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
