--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "install-windows-service": "winser -i -c",
+    "uninstall-windows-service": "winser -r -x"
   },
   "dependencies": {
     "body-parser": "~1.16.0",
